images which failed loading are removed from slider, slider image loading improved : when a slide becomes visible not only the images of this slide, but also the previous and the next slide are loaded, remove fixed height from slider to fix mobile appearance

--- a/app/src/app/shared/components/slider/slide/slide.component.scss
+++ b/app/src/app/shared/components/slider/slide/slide.component.scss
@@ -37,7 +37,6 @@
   }
 
   &-container {
-    //height: 20em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,8 +53,4 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-}
-
-.slide {
-  //height: 44em;
 }
