--- a/app/src/app/shared/components/slider/slider.component.scss
+++ b/app/src/app/shared/components/slider/slider.component.scss
@@ -8,7 +8,3 @@
 .carousel-control-next {
   width: 2%;
 }
-
-.slider {
-  //min-height: 40em; 
-}
